[tool.poetry]
name = "hjk52knk"
version = "0.1.0"
description = "wedding invitation on sphinx-doc"
authors = ["rino0601 <rino0601.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sphinx = "^3.0.4"
sphinxcontrib-mermaid = "^0.4.0"
recommonmark = "^0.6.0"
sphinx-sitemap = "^2.1.0"
sphinx-rtd-theme = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
autopep8 = "^1.5.3"
pylint = "^2.5.2"
doc8 = "^0.8.1"
taskipy = "^1.2.1"

[tool.taskipy.tasks]
test = "pytest"
lint = "pylint tests taskipy"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
