[tool.poetry]
name = "hjk52knk"
version = "0.1.0"
description = "wedding invitation on sphinx-doc"
authors = ["rino0601 <rino0601.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sphinx = {version = "^3.0.4",  optional = true}
sphinx-rtd-theme = {version = "^0.4.3",  optional = true}
sphinx-sitemap = {version = "^2.1.0",  optional = true}
recommonmark = {version = "^0.6.0",  optional = true}
sphinxcontrib-mermaid = {version = "^0.4.0",  optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
autopep8 = "^1.5.3"
pylint = "^2.5.2"
doc8 = "^0.8.1"
taskipy = "^1.2.1"
pip = "^20.1.1"

[tool.poetry.extras]
docs = ["recommonmark", "sphinx", "sphinx-rtd-theme","sphinx-sitemap","sphinxcontrib-mermaid"]


[tool.taskipy.tasks]
test = "pytest"
lint = "pylint tests taskipy"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
